--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <link rel="stylesheet" href="css/style.css">
 <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
 <!-- <script src="js/script.js"></script> -->
-<script src="js/object_literal_pattern.js"></script>
+<!-- <script src="js/object_literal_pattern.js"></script> -->
+<script src="js/namespace.js"></script>
 </head>
 <body>
     	<div class="article">
