--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
 <!-- <script src="js/script.js"></script> -->
 <!-- <script src="js/object_literal_pattern.js"></script> -->
-<script src="js/namespace.js"></script>
+<!-- <script src="js/namespace.js"></script> -->
+<script src="js/module_pattern.js"></script>
 </head>
 <body>
     	<div class="article">
