--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 <!-- <script src="js/object_literal_pattern.js"></script> -->
 <!-- <script src="js/namespace.js"></script> -->
 <!-- <script src="js/module_pattern.js"></script> -->
-<script src="js/module_reveal_pattern.js"></script>
+<!-- <script src="js/module_reveal_pattern.js"></script> -->
+<script src="js/mi_singleton.js"></script>
 </head>
 <body>
     	<div class="article">
