--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 <!-- <script src="js/module_pattern.js"></script> -->
 <!-- <script src="js/module_reveal_pattern.js"></script> -->
 <!-- <script src="js/mi_singleton.js"></script> -->
-<script src="js/singleton_2.js"></script>
+<!-- <script src="js/singleton_2.js"></script> -->
+<script src="js/factory.js"></script>
 </head>
 <body>
     	<div class="article">
