--- a/index.html
+++ b/index.html
@@ -16,34 +16,35 @@
 <!-- <script src="js/module_reveal_pattern.js"></script> -->
 <!-- <script src="js/mi_singleton.js"></script> -->
 <!-- <script src="js/singleton_2.js"></script> -->
-<script src="js/factory.js"></script>
 </head>
 <body>
-    	<div class="article">
-                <p>To learn more about this course visit my site <a href="http://02geek.com/" target="_blank">02GEEK</a>.</p>
-                <h1>Mastering JavaScript Design Patterns</h1>
-                <div class="info">
-	                <ul>
-	                	<li id="talk"><span>Change Me with JavaScript</span></li>
-	                </ul>
-	              </div>
-	              <div class="advert">
-	              	This is a cyber chat.
-	              </div>
-	              <h2>References:</h2>
-	              <ul style="text-align:left;">
-	              <li><a href="https://en.wikipedia.org/wiki/Software_design_pattern" target="_blank">Wiki definition to Design Patterns</a></li>
-	              <li><a href="http://www.dofactory.com/net/design-patterns" target="_blank">What are design patterns?</a></li>
-	              <li><a href="http://addyosmani.com/resources/essentialjsdesignpatterns/book/#whatisapattern" target="_blank">What is a pattern?</a></li>
-	              <li><a href="http://stackoverflow.com/questions/22906662/javascript-design-pattern-difference-between-module-pattern-and-revealing-modul" target="_blank">The differences between Module and Raveling Module patterns</a></li>
-	              <li><a href="http://www.adequatelygood.com/JavaScript-Module-Pattern-In-Depth.html" target="_blank">Module Pattern in depth</a></li>
-	              </ul>
-        </div>
-        
-        
-    	<div class="footer">
+	<div id="app"></div>
+	<div class="article">
+		<p>To learn more about this course visit my site <a href="http://02geek.com/" target="_blank">02GEEK</a>.</p>
+		<h1>Mastering JavaScript Design Patterns</h1>
+		<div class="info">
+			<ul>
+				<li id="talk"><span>Change Me with JavaScript</span></li>
+			</ul>
+		</div>
+		<div class="advert">
+			This is a cyber chat.
+		</div>
+		<h2>References:</h2>
+		<ul style="text-align:left;">
+				<li><a href="https://en.wikipedia.org/wiki/Software_design_pattern" target="_blank">Wiki definition to Design Patterns</a></li>
+				<li><a href="http://www.dofactory.com/net/design-patterns" target="_blank">What are design patterns?</a></li>
+				<li><a href="http://addyosmani.com/resources/essentialjsdesignpatterns/book/#whatisapattern" target="_blank">What is a pattern?</a></li>
+				<li><a href="http://stackoverflow.com/questions/22906662/javascript-design-pattern-difference-between-module-pattern-and-revealing-modul" target="_blank">The differences between Module and Raveling Module patterns</a></li>
+				<li><a href="http://www.adequatelygood.com/JavaScript-Module-Pattern-In-Depth.html" target="_blank">Module Pattern in depth</a></li>
+			</ul>
+		</div>
+		
+		
+		<div class="footer">
 			<a class="everything" href="http://02geek.com/"></a>
-        	<span>nice</span><span>everything</span>
-        </div>
+			<span>nice</span><span>everything</span>
+		</div>
+		<script src="js/factory.js"></script>
 </body>
 </html>
