--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 			<a class="everything" href="http://02geek.com/"></a>
 			<span>nice</span><span>everything</span>
 		</div>
-		<script src="js/factory.js"></script>
+		<!-- <script src="js/factory.js"></script> -->
+		<script src="js/builder.js"></script>
 </body>
 </html>
