--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 		<div class="advert">
 			This is a cyber chat.
 		</div>
+		<div id="app"></div>
 		<h2>References:</h2>
 		<ul style="text-align:left;">
 				<li><a href="https://en.wikipedia.org/wiki/Software_design_pattern" target="_blank">Wiki definition to Design Patterns</a></li>
