--- a/index.html
+++ b/index.html
@@ -48,5 +48,6 @@
 		</div>
 		<!-- <script src="js/factory.js"></script> -->
 		<script src="js/builder.js"></script>
+		<script src="js/module.js"></script>
 </body>
 </html>
