--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 			<span>nice</span><span>everything</span>
 		</div>
 		<!-- <script src="js/factory.js"></script> -->
-		<script src="js/builder.js"></script>
+		<!-- <script src="js/builder.js"></script> -->
 		<script src="js/module.js"></script>
 </body>
 </html>
